# lolzteam-api

./: .gitignore  README.md  pyproject.toml
src/lolzteam/: __init__.py  _base_client.py  _client.py  _exceptions.py  _loggers.py  _mixin.py  _models.py  _types.py  _version.py
